--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -8,34 +8,16 @@
 </head>
 
 <body>
-   <!--Завдання 1
-   Створити 2 маркованих списку-->
+    <!--Завдання 2
+   Зверстати блок статті складається з зображення, заголовка, абзацу та посилання. Текст і зображення візьміть будь-яку.-->
 
-   <ul>
-      <li>a</li>
-      <li>b</li>
-      <li>i</li>
-      <li>span</li>
-      <li>u</li>
-      <li>button</li>
-   </ul>
-
-   <ul>
-      <li>p</li>
-      <li>html</li>
-      <li>head</li>
-      <li>body</li>
-      <li>article</li>
-      <li>section</li>
-      <li>nav</li>
-      <li>h1, h2 ,h3 ,h4 ,h5 ,h6</li>
-      <li>header</li>
-      <li>main</li>
-      <li>footer</li>
-      <li>ol</li>
-      <li>ul</li>
-      <li>div</li>
-   </ul>
+   <article>
+      <h1>Як штучний інтелект вирішив стати неупередженим журналістом</h1>
+      <img src="https://gdb.rferl.org/7B510B5E-D43B-48BB-9565-D251E80E6BEB_w408_r1_s.jpg" alt="">
+      <p>Штучний інтелект вже став частиною багатьох сфер: він потрапив до медичних кабінетів, брокерських та юридичних
+         компаній та навіть отримав навички кодування. Та журналістика – це та сфера, де використання штучного інтелекту
+         може стати як у нагоді, так і великою <a href="https://www.google.com/">проблемою.</a></p>
+   </article>
 
 </body>
 
