--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -8,16 +8,29 @@
 </head>
 
 <body>
-    <!--Завдання 2
-   Зверстати блок статті складається з зображення, заголовка, абзацу та посилання. Текст і зображення візьміть будь-яку.-->
+    <!--Завдання 3
+   Зверстати нумерований список. У кожному елементі списку є заголовок і абзац тексту. Для заповнення використовуйте текс-рибу.-->
 
-   <article>
-      <h1>Як штучний інтелект вирішив стати неупередженим журналістом</h1>
-      <img src="https://gdb.rferl.org/7B510B5E-D43B-48BB-9565-D251E80E6BEB_w408_r1_s.jpg" alt="">
-      <p>Штучний інтелект вже став частиною багатьох сфер: він потрапив до медичних кабінетів, брокерських та юридичних
-         компаній та навіть отримав навички кодування. Та журналістика – це та сфера, де використання штучного інтелекту
-         може стати як у нагоді, так і великою <a href="https://www.google.com/">проблемою.</a></p>
-   </article>
+   <ol>
+      <li>
+         <h3>Lorem, ipsum dolor.</h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo expedita, inventore nobis
+            doloribus temporibus numquam saepe, molestiae consequatur velit quas! Asperiores beatae perferendis aliquid,
+            nihil voluptates voluptatibus ab rerum!</p>
+      </li>
+      <li>
+         <h3>Lorem, ipsum dolor.</h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo expedita, inventore nobis
+            doloribus temporibus numquam saepe, molestiae consequatur velit quas! Asperiores beatae perferendis aliquid,
+            nihil voluptates voluptatibus ab rerum!</p>
+      </li>
+      <li>
+         <h3>Lorem, ipsum dolor.</h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo expedita, inventore nobis
+            doloribus temporibus numquam saepe, molestiae consequatur velit quas! Asperiores beatae perferendis aliquid,
+            nihil voluptates voluptatibus ab rerum!</p>
+      </li>
+   </ol>
 
 </body>
 
