--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -8,29 +8,16 @@
 </head>
 
 <body>
-    <!--Завдання 3
-   Зверстати нумерований список. У кожному елементі списку є заголовок і абзац тексту. Для заповнення використовуйте текс-рибу.-->
-
-   <ol>
-      <li>
-         <h3>Lorem, ipsum dolor.</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo expedita, inventore nobis
-            doloribus temporibus numquam saepe, molestiae consequatur velit quas! Asperiores beatae perferendis aliquid,
-            nihil voluptates voluptatibus ab rerum!</p>
-      </li>
-      <li>
-         <h3>Lorem, ipsum dolor.</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo expedita, inventore nobis
-            doloribus temporibus numquam saepe, molestiae consequatur velit quas! Asperiores beatae perferendis aliquid,
-            nihil voluptates voluptatibus ab rerum!</p>
-      </li>
-      <li>
-         <h3>Lorem, ipsum dolor.</h3>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem explicabo expedita, inventore nobis
-            doloribus temporibus numquam saepe, molestiae consequatur velit quas! Asperiores beatae perferendis aliquid,
-            nihil voluptates voluptatibus ab rerum!</p>
-      </li>
-   </ol>
+    <!--Завдання 4
+   Зверстати маркований список, щоб кожен елемент був посиланням на соцмережу. При кліці на посилання, вона відкривається в новій вкладці браузера.
+-->
+   <ul>
+      <li><a href="https://www.facebook.com/" target="_blank">facebook</a></li>
+      <li><a href="https://www.linkedin.com/" target="_blank">linkedin</a></li>
+      <li><a href="https://twitter.com/" target="_blank">twitter</a></li>
+      <li><a href="https://www.reddit.com/" target="_blank">reddit</a></li>
+      <li><a href="https://imgur.com/" target="_blank">imgur</a></li>
+   </ul>
 
 </body>
 
