--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -4,20 +4,91 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
    <title>Document</title>
 </head>
 
 <body>
-    <!--Завдання 4
-   Зверстати маркований список, щоб кожен елемент був посиланням на соцмережу. При кліці на посилання, вона відкривається в новій вкладці браузера.
--->
-   <ul>
-      <li><a href="https://www.facebook.com/" target="_blank">facebook</a></li>
-      <li><a href="https://www.linkedin.com/" target="_blank">linkedin</a></li>
-      <li><a href="https://twitter.com/" target="_blank">twitter</a></li>
-      <li><a href="https://www.reddit.com/" target="_blank">reddit</a></li>
-      <li><a href="https://imgur.com/" target="_blank">imgur</a></li>
-   </ul>
+
+   <header>
+      <nav>
+         <ul>
+            <li><a href="#">lifestyle</a></li>
+            <li><a href="#">photodiary</a> </li>
+            <li><a href="#">music</a> </li>
+            <li><a href="#">travel</a> </li>
+         </ul>
+      </nav>
+   </header>
+
+   <main>
+      <section>
+         <ul>
+            <li>
+               <img src="../module-01/css/img/1.jpg" width="420" height="280" alt="">
+               <h2>Lifestyle</h2>
+               <h3>More than just a music festival </h3>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                  officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit
+                  voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+                  veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                  voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                  voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+                  consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
+                  magnam aliquam quaerat voluptatem.</p>
+            </li>
+            <li><img src="../module-01/css/img/2.jpg" width="420" height="280" alt="">
+               <h2>Lifestyle</h2>
+               <h3>More than just a music festival </h3>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                  officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit
+                  voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+                  veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                  voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                  voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+                  consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
+                  magnam aliquam quaerat voluptatem.</p>
+            </li>
+            <li><img src="../module-01/css/img/3.jpg" width="420" height="280" alt="">
+               <h2>photodiary</h2>
+               <h3>More than just a music festival </h3>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                  officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit
+                  voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+                  veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                  voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                  voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+                  consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
+                  magnam aliquam quaerat voluptatem.</p>
+            </li>
+            <li><img src="../module-01/css/img/4.jpg" width="420" height="280" alt="">
+               <h2>photodiary</h2>
+               <h3>More than just a music festival </h3>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                  officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit
+                  voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+                  veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                  voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                  voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+                  consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
+                  magnam aliquam quaerat voluptatem.</p>
+            </li>
+         </ul>
+         <button>load more</button>
+      </section>
+   </main>
 
 </body>
 
