--- a/html-css/module-01/index.html
+++ b/html-css/module-01/index.html
@@ -26,8 +26,8 @@
          <ul>
             <li>
                <img src="../module-01/css/img/1.jpg" width="420" height="280" alt="">
-               <h2>Lifestyle</h2>
-               <h3>More than just a music festival </h3>
+               <p>Lifestyle</p>
+               <h2>More than just a music festival </h2>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
@@ -41,8 +41,8 @@
                   magnam aliquam quaerat voluptatem.</p>
             </li>
             <li><img src="../module-01/css/img/2.jpg" width="420" height="280" alt="">
-               <h2>Lifestyle</h2>
-               <h3>More than just a music festival </h3>
+               <p>Lifestyle</p>
+               <h2>Life tastes better with coffee </h2>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
@@ -56,8 +56,8 @@
                   magnam aliquam quaerat voluptatem.</p>
             </li>
             <li><img src="../module-01/css/img/3.jpg" width="420" height="280" alt="">
-               <h2>photodiary</h2>
-               <h3>More than just a music festival </h3>
+               <p>photodiary</p>
+               <h2>American dream </h2>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
@@ -71,8 +71,8 @@
                   magnam aliquam quaerat voluptatem.</p>
             </li>
             <li><img src="../module-01/css/img/4.jpg" width="420" height="280" alt="">
-               <h2>photodiary</h2>
-               <h3>More than just a music festival </h3>
+               <p>photodiary</p>
+               <h2>A day exploring the Alpss </h2>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
