--- a/html-css/module-03/extra task/extra task 04/index.html
+++ b/html-css/module-03/extra task/extra task 04/index.html
@@ -4,11 +4,15 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>extra task 4</title>
 </head>
 
 <body>
-
+   <ul>
+      <li>#myid:focus = 0110</li>
+      <li>.menu > li > a:hover = 0022</li>
+      <li>#myid > ul > li a:hover = 0113</li>
+   </ul>
 
 
 </body>
