--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -5,81 +5,74 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="css/normalize.css">
+   <link rel="stylesheet" href="css/style.css">
    <title>Document</title>
 </head>
 
 <body>
 
-   
-
-   <main>
-      <section>
-         <ul>
-            <li>
-               <img src="../module-01/css/img/1.jpg" width="420" height="280" alt="">
-               <p>Lifestyle</p>
-               <h2>More than just a music festival </h2>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                  officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit
-                  voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-                  veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                  voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                  voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-                  consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
-                  magnam aliquam quaerat voluptatem.</p>
-            </li>
-            <li><img src="../module-01/css/img/2.jpg" width="420" height="280" alt="">
-               <p>Lifestyle</p>
-               <h2>Life tastes better with coffee </h2>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                  officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit
-                  voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-                  veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                  voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                  voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-                  consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
-                  magnam aliquam quaerat voluptatem.</p>
-            </li>
-            <li><img src="../module-01/css/img/3.jpg" width="420" height="280" alt="">
-               <p>photodiary</p>
-               <h2>American dream </h2>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                  officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit
-                  voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-                  veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                  voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                  voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-                  consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
-                  magnam aliquam quaerat voluptatem.</p>
-            </li>
-            <li><img src="../module-01/css/img/4.jpg" width="420" height="280" alt="">
-               <p>photodiary</p>
-               <h2>A day exploring the Alpss </h2>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                  officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit
-                  voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-                  veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                  voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                  voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-                  consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
-                  magnam aliquam quaerat voluptatem.</p>
-            </li>
+   <header class="header container">
+      <nav class="nav">
+         <ul class="nav__list">
+            <li class="nav__link"><a href="">lifestyle</a></li>
+            <li class="nav__link"><a href="">photodiary</a></li>
+            <li class="nav__link"><a href="">music</a></li>
+            <li class="nav__link"><a href="">travel</a></li>
          </ul>
-         <button>load more</button>
-      </section>
-   </main>
+      </nav>
+   </header>
+
+   <section class="section container">
+      <ul class="all-items">
+         <li class="items">
+            <img src="css/img/1.jpg" alt="">
+            <p class="about__item">Lifestyle</p>
+            <h2>More than just a music festival </h2>
+            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+         </li>
+         <li class="items">
+            <img src="css/img/2.jpg" alt="">
+            <p class="about__item">Lifestyle</p>
+            <h2>Life tastes better with coffee</h2>
+            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+         </li>
+         <li class="items">
+            <img src="css/img/3.jpg" alt="">
+            <p class="about__item">photodiary</p>
+            <h2>American dream</h2>
+            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+         </li>
+         <li class="items">
+            <img src="css/img/4.jpg" alt="">
+            <p class="about__item">photodiary</p>
+            <h2>A day exploring the Alps</h2>
+            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+         </li>
+         <li class="items">
+            <img src="css/img/5.jpg" alt="">
+            <p class="about__item">lifestyle</p>
+            <h2>Top 10 song for running</h2>
+            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+         </li>
+         <li class="items">
+            <img src="css/img/6.jpg" alt="">
+            <p class="about__item">lifestyle</p>
+            <h2>Cold winter days</h2>
+            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+         </li>
+      </ul>
+   </section>
+
+
+
+
 
 </body>
 
