--- a/html-css/module-03/extra task/extra task 02/index.html
+++ b/html-css/module-03/extra task/extra task 02/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="css/style.css">
+   <title>extra task 2-3</title>
 </head>
+
 <body>
+
+   <section class="wrapper">
+      <div class="items">
+         <ul>
+            <li>
+               <img src="img/1.jpg" alt="" width="420" height="280">
+               <p class="about__item">Lifestyle</p>
+               <h2>More than just a music festival</h2>
+               <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                  ullamco laboris </p>
+            </li>
+         </ul>
+      </div>
+
+
+
+
+   </section>
+
 
 
 
 </body>
+
 </html>
