--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -29,46 +29,54 @@
             <img src="css/img/1.jpg" alt="">
             <p class="about__item">Lifestyle</p>
             <h2>More than just a music festival </h2>
-            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+               incididunt ut labore et
                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
          </li>
          <li class="items">
             <img src="css/img/2.jpg" alt="">
             <p class="about__item">Lifestyle</p>
             <h2>Life tastes better with coffee</h2>
-            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+               incididunt ut labore et
                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
          </li>
          <li class="items">
             <img src="css/img/3.jpg" alt="">
             <p class="about__item">photodiary</p>
             <h2>American dream</h2>
-            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+               incididunt ut labore et
                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
          </li>
          <li class="items">
             <img src="css/img/4.jpg" alt="">
             <p class="about__item">photodiary</p>
             <h2>A day exploring the Alps</h2>
-            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+               incididunt ut labore et
                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
          </li>
          <li class="items">
             <img src="css/img/5.jpg" alt="">
             <p class="about__item">lifestyle</p>
             <h2>Top 10 song for running</h2>
-            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+               incididunt ut labore et
                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
          </li>
          <li class="items">
             <img src="css/img/6.jpg" alt="">
             <p class="about__item">lifestyle</p>
             <h2>Cold winter days</h2>
-            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            <p class="text__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+               incididunt ut labore et
                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
          </li>
       </ul>
    </section>
+
+   <button class="bnt"><a href="">Load more</a></button>
 
 
 
