--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -15,10 +15,10 @@
    <header class="header container">
       <nav class="nav">
          <ul class="nav__list">
-            <li class="nav__link"><a href="">lifestyle</a></li>
-            <li class="nav__link"><a href="">photodiary</a></li>
-            <li class="nav__link"><a href="">music</a></li>
-            <li class="nav__link"><a href="">travel</a></li>
+            <li class="nav__link"><a href="#">lifestyle</a></li>
+            <li class="nav__link"><a href="#">photodiary</a></li>
+            <li class="nav__link"><a href="#">music</a></li>
+            <li class="nav__link"><a href="#">travel</a></li>
          </ul>
       </nav>
    </header>
@@ -76,7 +76,7 @@
       </ul>
    </section>
 
-   <button class="bnt"><a href="">Load more</a></button>
+   <button class="bnt"><a href="#">Load more</a></button>
 
 
 
