--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-
-   <header class="header container">
+<div class="container">
+   <header class="header">
       <nav class="nav">
          <ul class="nav__list">
             <li class="nav__link"><a href="#">lifestyle</a></li>
@@ -22,8 +22,9 @@
          </ul>
       </nav>
    </header>
+  
 
-   <section class="section container">
+   <section class="section">
       <ul class="all-items">
          <li class="items">
             <img src="css/img/1.jpg" alt="">
@@ -77,6 +78,7 @@
    </section>
 
    <button class="bnt"><a href="#">Load more</a></button>
+</div>    
 
 
 
