--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -13,16 +13,18 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container clearfix">
         <header>
             <div class="logo"><span class="logo_m">M</span>art
                 <nav class="nav">
                     <ul class="nav_list">
-                        <li class="nav_link"><a href="#">About Us</a> </li>
-                        <li class="nav_link"><a href="#">Page</a> </li>
-                        <li class="nav_link"><a href="#">Shop</a> </li>
-                        <li class="nav_link"><a href="#">Blog</a> </li>
-                        <li class="nav_link"><a href="#">Contact US</a> </li>
+                        <li class="nav_link"><a href="#">Contact Us</a></li>
+                        <li class="nav_link"><a href="#">Blog</a></li>
+                        <li class="nav_link"><a href="#">Shop</a></li>
+                        <li class="nav_link"><a href="#">Page</a></li>
+                        <li class="nav_link"><a href="#">About Us</a></li>
+                        <li class="nav_link"><a href="#">Home</a></li>
+                        
                     </ul>
                 </nav>
             </div>
@@ -30,12 +32,12 @@
 
         <section class="section">
             <h1>FEATURED PRODUCTS</h1>
-            <ul>
+            <ul class="clearfix">
                 <li class="product"><img src="css/img/product1.png" alt="">
-                    <p>
-                    <p class="name_p">Blue Tshirt</p>
-                    <p class="price_p">$26</p>
-                    </p>
+                    <div class="name_p-price_p">
+                        <span class="name_p">Blue Tshirt</span>
+                        <span class="price_p">$26</span>
+                    </div>
 
 
                 </li>
@@ -74,24 +76,24 @@
 
         <section class="section_2">
             <h2>LATEST NEWS</h2>
-            <ul>
+            <ul class="clearfix">
                 <li class="blog"><img src="css/img/Blog/1.png" alt="">
                     <h3>Lorem Ipsum. Proin gravida nibh vel <br> velit auctor aliquet. Aenean </h3>
                     <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet
                         mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
-                    <button><a class="btn_text" href="">Read More</a></button>
+                    <div class="button"><a class="btn_text" href="">Read More</a></div>
                 </li>
                 <li class="blog"><img src="css/img/Blog/2.png" alt="">
                     <h3>Lorem Ipsum. Proin gravida nibh vel <br> velit auctor aliquet. Aenean </h3>
                     <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet
                         mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                    <button><a class="btn_text" href="">Read More</a></button>
+                    <div class="button"><a class="btn_text" href="">Read More</a></div>
                 </li>
                 <li class="blog"><img src="css/img/Blog/3.png" alt="">
                     <h3>Lorem Ipsum. Proin gravida nibh vel <br> velit auctor aliquet. Aenean </h3>
                     <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet
                         mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                    <button><a class="btn_text" href="">Read More</a></button>
+                    <div class="button"><a class="btn_text" href="">Read More</a></div>
                 </li>
             </ul>
         </section>
