--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -24,7 +24,7 @@
                         <li class="nav_link"><a href="#">Page</a></li>
                         <li class="nav_link"><a href="#">About Us</a></li>
                         <li class="nav_link"><a href="#">Home</a></li>
-                        
+
                     </ul>
                 </nav>
             </div>
@@ -33,7 +33,8 @@
         <section class="section">
             <h1>FEATURED PRODUCTS</h1>
             <ul class="clearfix">
-                <li class="product"><img src="css/img/product1.png" alt="">
+                <li class="product"><img src="./css/img/product1.png" alt="тут була картинка :(" width="255"
+                        height="322">
                     <div class="name_p-price_p">
                         <span class="name_p">Blue Tshirt</span>
                         <span class="price_p">$26</span>
@@ -41,33 +42,40 @@
 
 
                 </li>
-                <li class="product"><img src="css/img/product2.png" alt="">
+                <li class="product"><img src="./css/img/product2.png" alt="тут була картинка :(" width="255"
+                        height="322">
                     <p class="name_p">Blue Tshirt</p>
                     <p class="price_p">$31</p>
 
 
                 </li>
-                <li class="product"><img src="css/img/product3.png" alt="">
+                <li class="product"><img src="./css/img/product3.png" alt="тут була картинка :(" width="255"
+                        height="322">
                     <p class="name_p">YELLOW Tshirt</p>
                     <p class="price_p">$21</p>
                 </li>
-                <li class="product"><img src="css/img/product4.png" alt="">
+                <li class="product"><img src="./css/img/product4.png" alt="тут була картинка :(" width="255"
+                        height="322">
                     <p class="name_p">Cool lingerie</p>
                     <p class="price_p">$56</p>
                 </li>
-                <li class="product"><img src="css/img/product5.png" alt="">
+                <li class="product"><img src="./css/img/product5.png" alt="тут була картинка :(" width="255"
+                        height="322">
                     <p class="name_p">Blue Tshirt</p>
                     <p class="price_p">$26</p>
                 </li>
-                <li class="product"><img src="css/img/product6.png" alt="">
+                <li class="product"><img src="./css/img/product6.png" alt="тут була картинка :(" width="255"
+                        height="322">
                     <p class="name_p">WOMAN shirt</p>
                     <p class="price_p">$31</p>
                 </li>
-                <li class="product"><img src="css/img/product7.png" alt="">
+                <li class="product"><img src="./css/img/product7.png" alt="тут була картинка :(" width="255"
+                        height="322">
                     <p class="name_p">YELLOW Tshirt</p>
                     <p class="price_p">$21</p>
                 </li>
-                <li class="product"><img src="css/img/product8.png" alt="">
+                <li class="product"><img src="./css/img/product8.png" alt="тут була картинка :(" width="255"
+                        height="322">
                     <p class="name_p">Cool lingerie</p>
                     <p class="price_p">$56</p>
                 </li>
@@ -77,19 +85,19 @@
         <section class="section_2">
             <h2>LATEST NEWS</h2>
             <ul class="clearfix">
-                <li class="blog"><img src="css/img/Blog/1.png" alt="">
+                <li class="blog"><img src="./css/img/blog/1.png" alt="тут була картинка :(" width="350" height="262">
                     <h3>Lorem Ipsum. Proin gravida nibh vel <br> velit auctor aliquet. Aenean </h3>
                     <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet
                         mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
                     <div class="button"><a class="btn_text" href="">Read More</a></div>
                 </li>
-                <li class="blog"><img src="css/img/Blog/2.png" alt="">
+                <li class="blog"><img src="./css/img/Blog/2.png" alt="тут була картинка :(" width="350" height="262">
                     <h3>Lorem Ipsum. Proin gravida nibh vel <br> velit auctor aliquet. Aenean </h3>
                     <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet
                         mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
                     <div class="button"><a class="btn_text" href="">Read More</a></div>
                 </li>
-                <li class="blog"><img src="css/img/Blog/3.png" alt="">
+                <li class="blog"><img src="./css/img/Blog/3.png" alt="тут була картинка :(" width="350" height="262">
                     <h3>Lorem Ipsum. Proin gravida nibh vel <br> velit auctor aliquet. Aenean </h3>
                     <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet
                         mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
