--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -50,9 +50,6 @@
                <p class="services_text">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
                </p>
             </li>
-         </ul>
-
-         <ul class="services_list">
             <li class="services_list_item">
                <img class="services_icon" src="img/icon/4.png" alt="" width="32px" height="32px">
                <h3 class="services_name">Photography</h3>
@@ -84,62 +81,74 @@
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             ea commodo consequat.</p>
          <div class="all_card">
+
+
             <ul class="team_card">
                <li class="team_item">
                   <div class="team_img">
                      <img class="img_img" src="img/team/1.jpg" alt="">
-                  </div>
-                  <div class="team_icon">
-                     <a href="#"><button class="icon"><img src="img/icon-2/1.png" alt="" width="13px"
-                              height="26px"></button></a>
-                     <a href="#"><button class="icon"><img src="img/icon-2/2.png" alt="" width="26px"
-                              height="22px"></button></a>
-                     <a href="#"><button class="icon"><img src="img/icon-2/3.png" alt="" width="21px"
-                              height="26px"></button></a>
-                     <a href="#"><button class="icon"><img src="img/icon-2/4.png" alt="" width="26px"
-                              height="26px"></button></a>
+
+                     <ul class="social_icon">
+                        <li> <button class="icon"><img src="img/icon-2/1.png" alt="тут була картинка :(" width="13px"
+                                 height="26px"> <a href="#"></a> </button> </li>
+                        <li> <button class="icon"><img src="img/icon-2/2.png" alt="тут була картинка :(" width="26px"
+                                 height="22px"> <a href="#"></a> </button> </li>
+                        <li> <button class="icon"><img src="img/icon-2/3.png" alt="тут була картинка :(" width="21px"
+                                 height="26px"> <a href="#"></a> </button> </li>
+                        <li> <button class="icon"><img src="img/icon-2/4.png" alt="тут була картинка :(" width="26px"
+                                 height="26px"> <a href="#"></a> </button> </li>
+                     </ul>
                   </div>
                   <h3>Matthew Dix</h3>
                   <p class="team_prof">Graphic Design</p>
+               </li>
             </ul>
 
             <ul class="team_card">
                <li class="team_item">
                   <div class="team_img">
                      <img class="img_img" src="img/team/2.jpg" alt="">
+
+                     <ul class="social_icon">
+                        <li> <button class="icon"><img src="img/icon-2/1.png" alt="тут була картинка :(" width="13px"
+                                 height="26px"> <a href="#"></a> </button> </li>
+                        <li> <button class="icon"><img src="img/icon-2/2.png" alt="тут була картинка :(" width="26px"
+                                 height="22px"> <a href="#"></a> </button> </li>
+                        <li> <button class="icon"><img src="img/icon-2/3.png" alt="тут була картинка :(" width="21px"
+                                 height="26px"> <a href="#"></a> </button> </li>
+                        <li> <button class="icon"><img src="img/icon-2/4.png" alt="тут була картинка :(" width="26px"
+                                 height="26px"> <a href="#"></a> </button> </li>
+                     </ul>
                   </div>
-                  <div class="team_icon">
-                     <a href="#"><button class="icon"><img src="img/icon-2/1.png" alt="" width="13px"
-                              height="26px"></button></a>
-                     <a href="#"><button class="icon"><img src="img/icon-2/2.png" alt="" width="26px"
-                              height="22px"></button></a>
-                     <a href="#"><button class="icon"><img src="img/icon-2/3.png" alt="" width="21px"
-                              height="26px"></button></a>
-                     <a href="#"><button class="icon"><img src="img/icon-2/4.png" alt="" width="26px"
-                              height="26px"></button></a>
-                  </div>
-                  <h3>Christopher Campbell</h3>
-                  <p class="team_prof">Branding/UX design</p>
+                  <h3>Matthew Dix</h3>
+                  <p class="team_prof">Graphic Design</p>
+               </li>
             </ul>
 
             <ul class="team_card">
                <li class="team_item">
                   <div class="team_img">
                      <img class="img_img" src="img/team/3.jpg" alt="">
+
+                     <ul class="social_icon">
+                        <li> <button class="icon"><img src="img/icon-2/1.png" alt="тут була картинка :(" width="13px"
+                                 height="26px"> <a href="#"></a> </button> </li>
+                        <li> <button class="icon"><img src="img/icon-2/2.png" alt="тут була картинка :(" width="26px"
+                                 height="22px"> <a href="#"></a> </button> </li>
+                        <li> <button class="icon"><img src="img/icon-2/3.png" alt="тут була картинка :(" width="21px"
+                                 height="26px"> <a href="#"></a> </button> </li>
+                        <li> <button class="icon"><img src="img/icon-2/4.png" alt="тут була картинка :(" width="26px"
+                                 height="26px"> <a href="#"></a> </button> </li>
+                     </ul>
                   </div>
-                  <div class="team_icon">
-                     <a href="#"><button class="icon"><img src="img/icon-2/1.png" alt="" width="13px"
-                              height="26px"></button></a>
-                     <a href="#"><button class="icon"><img src="img/icon-2/2.png" alt="" width="26px"
-                              height="22px"></button></a>
-                     <a href="#"><button class="icon"><img src="img/icon-2/3.png" alt="" width="21px"
-                              height="26px"></button></a>
-                     <a href="#"><button class="icon"><img src="img/icon-2/4.png" alt="" width="26px"
-                              height="26px"></button></a>
-                  </div>
-                  <h3>Michael Fertig </h3>
-                  <p class="team_prof">Developer</p>
+                  <h3>Matthew Dix</h3>
+                  <p class="team_prof">Graphic Design</p>
+               </li>
             </ul>
+
+
+
+
          </div>
       </div>
    </section>
@@ -149,7 +158,7 @@
          <hr>
          <div class="container_footer">
 
-            <p class="footer_logo">© 2016 MoGo free PSD template by <span class="last_word">Laaqiq</span></p>
+            <p class="footer_logo">© 2016 MoGo free PSD template by <a href="#" class="last_word">Laaqiq</a></p>
             <form action="">
                <input type="text" class="color_text" placeholder="Your Email...">
                <button class="btn">Subscribe</button>
@@ -159,4 +168,5 @@
    </footer>
 
 </body>
+
 </html>
