--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -14,7 +14,7 @@
    <div class="background container">
 
       <header class="header">
-         <div class="container">
+         <div class="container container_nav">
             <nav class="nav">
                <a class="logo" href="#">URLAUBSGLÜCK</a>
                <ul class="nav_list">
@@ -32,7 +32,7 @@
             <p class="sub_h1">And find the perfect partner to fullfill it</p>
 
             <div class="container_bnt">
-               <button class="btn_1">Find your holiday partner</button>
+               <button class="btn btn_top">Find your holiday partner</button>
             </div>
          </div>
       </section>
@@ -45,7 +45,7 @@
          <ul class="list_partner">
             <li class="item_partner">
                <div class="img_box">
-                  <div class="img_partner img_partner1">
+                  <div class="img_partner">
                      <img src="img/img-team/1.png" alt="" width="121px" height="121px">
                   </div>
                </div>
@@ -86,7 +86,7 @@
             </li>
          </ul>
 
-         <button class="btn_partner">See other partners</button>
+         <button class="btn btn_bottom">See other partners</button>
       </div>
 
    </section>
