--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -8,12 +8,14 @@
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@300&display=swap"
       rel="stylesheet">
    <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="css/bootstrap-grid.css">
 </head>
 
 <body>
    <div class="background container">
-
+<div class="container">
       <header class="header">
+      
          <div class="container container_nav">
             <nav class="nav">
                <a class="logo" href="#">URLAUBSGLÜCK</a>
@@ -25,6 +27,7 @@
             </nav>
          </div>
       </header>
+   </div>
 
       <section class="section">
          <div class="container">
