--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -14,14 +14,14 @@
 <body>
   <div class="bg">
     <header class="container">
-      <div class="row">
-        <div class="col-12 menu">
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-8 col-lg-8 menu">
           <div
             class="row align-items-md-center align-items-lg-center justify-content-md-between justify-content-lg-between flex-sm-column-reverse">
-            <div class="logo col-12 col-md-3 col-lg-3">
+            <div class="logo ">
               <a class="nav_logo" href="#">URLAUBSGLÜCK</a>
             </div>
-            <div class="nav col-12 col-md-4 col-lg-3">
+            <div class="nav ">
               <nav class="d-md-flex d-lg-flex justify-content-md-between">
                 <a href="#" class="nav_link">Log In</a>
                 <a href="#" class="nav_link n2">Sign Up</a>
@@ -32,97 +32,82 @@
       </div>
     </header>
     <section class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="col-12">
-            <h1>SHARE YOUR <br />HOLIDAY DREAMS</h1>
-          </div>
-          <div class="col-12">
-            <p class="sub_h1">
-              And find the perfect partner <br class="br_h2"> to
-              fullfill it
-            </p>
-          </div>
-          <div class="col-12 btn_box">
-            <a href="#" class="btn">Find your holiday partner</a>
-          </div>
-        </div>
+      <h1>SHARE YOUR <br />HOLIDAY DREAMS</h1>
+      <div class="col-12">
+        <p class="sub_h1">
+          And find the perfect partner <br class="br_h2"> to
+          fullfill it
+        </p>
       </div>
+      <div class="btn_box">
+        <a href="#" class="btn">Find your holiday partner</a>
+      </div>
+
+
     </section>
   </div>
   <main>
     <section class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="row">
-            <div class="col-12 title-par">
-              <div class="box_h2">
-                <h2>
-                  Meet a partner for your <br class="br_h2"> best
-                  holiday
-                </h2>
-              </div>
+
+      <div class="box_h2">
+        <h2>
+          Meet a partner for your <br class="br_h2"> best
+          holiday
+        </h2>
+      </div>
+      </div>
+      <div class="col-12">
+        <div class="partners row">
+          <div class="partner col-12 col-md-6 col-lg-3">
+            <div class="img_partner">
+              <img src="./img/img-team/1.png" alt="partner 1" width="121" height="121" />
             </div>
-            <div class="col-12">
-              <div class="partners row">
-                <div class="partner col-12 col-md-6 col-lg-3">
-                  <div class="img_partner">
-                    <img src="./img/img-team/1.png" alt="partner 1" width="121" height="121" />
-                  </div>
-                  <div class="all_discription">
-                    <h4 class="name">Bradley Hunter</h4>
-                    <p class="discription">
-                      Based in Chicago. I love playing tennis and loud music.
-                    </p>
-                  </div>
-                </div>
-                <div class="partner col-12 col-md-6 col-lg-3">
-                  <div class="img_partner img_partner2">
-                    <img src="./img/img-team/2.png" alt="partner 1" width="121" height="121" />
-                  </div>
-                  <div class="all_discription">
-                    <h4 class="name">Lucas Marsha</h4>
-                    <p class="discription">
-                      I get my inspiration from nature and objects around me.
-                      I have a possion to colours,typography and skateboards.
-                    </p>
-                  </div>
-                </div>
-                <div class="partner col-12 col-md-6 col-lg-3">
-                  <div class="img_partner img_partner3">
-                    <img src="./img/img-team/3.png" alt="partner 1" width="121" height="121" />
-                  </div>
-                  <div class="all_discription">
-                    <h4 class="name">Heather Walker</h4>
-                    <p class="discription">
-                      I'm a happy person that loves cats and climbing on
-                      mountains.
-                    </p>
-                  </div>
-                </div>
-                <div class="partner col-12 col-md-6 col-lg-3">
-                  <div class="img_partner img_partner4">
-                    <img src="./img/img-team/4.png" alt="partner 1" width="121" height="121" />
-                  </div>
-                  <div class="all_discription">
-                    <h4 class="name">Bradley Hunter</h4>
-                    <p class="discription">
-                      Based in Chicago. I love playing tennis and loud music.
-                    </p>
-                  </div>
-                </div>
-              </div>
+            <div class="all_discription">
+              <h4 class="name">Bradley Hunter</h4>
+              <p class="discription">
+                Based in Chicago. I love playing tennis and loud music.
+              </p>
             </div>
-            <div class="container btn_mt">
-              <div class="row">
-                <div class="col-12">
-                  <a href="#" class="btn">See other partners</a>
-                </div>
-              </div>
+          </div>
+          <div class="partner col-12 col-md-6 col-lg-3">
+            <div class="img_partner img_partner2">
+              <img src="./img/img-team/2.png" alt="partner 1" width="121" height="121" />
+            </div>
+            <div class="all_discription">
+              <h4 class="name">Lucas Marsha</h4>
+              <p class="discription">
+                I get my inspiration from nature and objects around me.
+                I have a possion to colours,typography and skateboards.
+              </p>
+            </div>
+          </div>
+          <div class="partner col-12 col-md-6 col-lg-3">
+            <div class="img_partner img_partner3">
+              <img src="./img/img-team/3.png" alt="partner 1" width="121" height="121" />
+            </div>
+            <div class="all_discription">
+              <h4 class="name">Heather Walker</h4>
+              <p class="discription">
+                I'm a happy person that loves cats and climbing on
+                mountains.
+              </p>
+            </div>
+          </div>
+          <div class="partner col-12 col-md-6 col-lg-3">
+            <div class="img_partner img_partner4">
+              <img src="./img/img-team/4.png" alt="partner 1" width="121" height="121" />
+            </div>
+            <div class="all_discription">
+              <h4 class="name">Bradley Hunter</h4>
+              <p class="discription">
+                Based in Chicago. I love playing tennis and loud music.
+              </p>
             </div>
           </div>
         </div>
       </div>
+      <div class="container btn_mt">
+        <a href="#" class="btn">See other partners</a>
     </section>
   </main>
 </body>
