--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -32,16 +32,19 @@
       </div>
     </header>
     <section class="container">
-      <h1>SHARE YOUR <br />HOLIDAY DREAMS</h1>
-      <div class="col-12">
-        <p class="sub_h1">
-          And find the perfect partner <br class="br_h2"> to
-          fullfill it
-        </p>
+      <div class="row justify-content-center">
+        <div class="col-8">
+          <h1>SHARE YOUR <br />HOLIDAY DREAMS</h1>
+          <p class="sub_h1">
+            And find the perfect partner <br class="br_h2"> to
+            fullfill it
+          </p>
+          <div class="btn_box">
+            <a href="#" class="btn">Find your holiday partner</a>
+          </div>
+        </div>
       </div>
-      <div class="btn_box">
-        <a href="#" class="btn">Find your holiday partner</a>
-      </div>
+
 
 
     </section>
